Started restructuring 9th and 10th lectures. Incomplete.
Also added a new file, where the plusminus tasks and answers are given.

--- a/06gy_cpp/06gy_cpp.tex
+++ b/06gy_cpp/06gy_cpp.tex
@@ -441,6 +441,7 @@ private:
 
 class List {//...};
 \end{lstlisting}
+%TODO operator++ miért nem referenciával tér vissza?
 	És itt az előbb említett problémába bele is ütköztünk: a fordító siránkozik, hogy a \texttt{List} egy un. \textit{incomplete type}. Ugyanis az tudja hogy van osztály hogy \texttt{List}, de az, hogy \texttt{next} adattag, nem tudja micsoda. Ezért ezeket a tagfüggvényeket a lista után kell írni.
 \begin{lstlisting}
 class List;
